--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets\img\trainers\rishi.JPG" class="img-fluid" alt="">
+              <img src="assets\img\trainers\rishisq.JPG" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>Richie Choolun</h4>
                 <span>Teacher & Trainer</span>
