--- a/courses.html
+++ b/courses.html
@@ -71,13 +71,25 @@
       </div>
     </div><!-- End Breadcrumbs -->
 
+    <!-- Hero Section -->
+
+    <section id="hero_courses" class="d-flex justify-content-center align-items-center">
+      <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
+        <h1><i>Programming With Compassion,<br>Always Learning</i></h1>
+        <h2>Have fun learning Scratch, Roblox and Python!</h2>
+        <a href="courses.html" class="btn-get-started">Find Out More</a>
+      </div>
+    </section
+
+    
+
     <!-- ======= Courses Section ======= -->
     <section id="courses" class="courses">
       <div class="container" data-aos="fade-up">
 
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
-          <div class="hackmd">
-          <iframe src="https://hackmd.io/@kuangkao-peace/r1s6nZ9tF/%2FfFZqJKGzTIqPEjcK7tARZA" title="W3Schools Free Online Web Tutorials"></iframe></div>
+          <!-- <div class="hackmd"> -->
+          <!-- <iframe src="https://hackmd.io/@kuangkao-peace/r1s6nZ9tF/%2FfFZqJKGzTIqPEjcK7tARZA" title="W3Schools Free Online Web Tutorials"></iframe></div> -->
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="course-item">
@@ -93,7 +105,7 @@
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets\img\trainers\kuangresize.jpg" class="img-fluid" alt="">
-                    <span>Kuang Kao</span>
+                    <span>Kuang</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
                     <i class="bx bx-user"></i>&nbsp;50
@@ -118,7 +130,7 @@
                 <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
-                    <img src="assets\img\trainers\rishi.JPG" class="img-fluid" alt="">
+                    <img src="assets\img\trainers\rishisq.JPG" class="img-fluid" alt="">
                     <span>Richie</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
