change the title to 520

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex justify-content-center align-items-center">
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Heal Minds<br>in this World</h1>
+      <h1>Heal Minds<br>in this World 520</h1>
       <h2></h2>
       <a href="courses.html" class="btn-get-started">Get Started</a>
     </div>
