--- a/courses.html
+++ b/courses.html
@@ -75,7 +75,7 @@
 
     <section id="hero_courses" class="d-flex justify-content-center align-items-center">
       <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-        <h1><i>Programming With Compassion,<br>Always Learning</i></h1>
+        <h1><i>Programming & Compassion!<br>Always Learning</i></h1>
         <h2>Have fun learning Scratch, Roblox and Python!</h2>
         <a href="courses.html" class="btn-get-started">Find Out More</a>
       </div>
