Centering H1 and Roadmap

--- a/courses.html
+++ b/courses.html
@@ -83,7 +83,7 @@
 
     <!-- Roadmap  -->
 
-    <img src="assets\img\RoadmapCWL.svg" alt="Roadmap">
+    <img class ="roadmap" src="assets\img\RoadmapCWL.svg" alt="Roadmap">
 
 
     <!-- ======= About Section ======= -->
