commented out courses info

--- a/courses.html
+++ b/courses.html
@@ -83,7 +83,7 @@
 
     <!-- Roadmap  -->
 
-    <img class ="roadmap" src="assets\img\RoadmapCWL.svg" alt="Roadmap">
+    <img class ="roadmap" src="assets\img\roadmapg.gif" alt="Roadmap">
 
 
     <!-- ======= About Section ======= -->
@@ -173,12 +173,11 @@
     
 
     <!-- ======= Courses Section ======= -->
-    <section id="courses" class="courses">
+      <!-- <section id="courses" class="courses">
       <div class="container" data-aos="fade-up">
 
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
-          <!-- <div class="hackmd"> -->
-          <!-- <iframe src="https://hackmd.io/@kuangkao-peace/r1s6nZ9tF/%2FfFZqJKGzTIqPEjcK7tARZA" title="W3Schools Free Online Web Tutorials"></iframe></div> -->
+          
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="course-item">
@@ -204,7 +203,7 @@
                 </div>
               </div>
             </div>
-          </div> <!-- End Course Item-->
+          </div> 
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="course-item">
@@ -230,7 +229,7 @@
                 </div>
               </div>
             </div>
-          </div> <!-- End Course Item-->
+          </div> 
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="course-item">
@@ -256,12 +255,12 @@
                 </div>
               </div>
             </div>
-          </div> <!-- End Course Item-->
+          </div> 
 
         </div>
 
       </div>
-    </section><!-- End Courses Section -->
+    </section> --> <!-- End Courses Section -->
 
   </main><!-- End #main -->
 
