--- a/courses.html
+++ b/courses.html
@@ -85,6 +85,38 @@
 
     <img class ="roadmap" src="assets\img\roadmapg.gif" alt="Roadmap">
 
+    <!-- Button and Youtube Link -->
+
+    <section id="why-us" class="why-us">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row">
+          <div class="col-lg-12 d-flex align-items-stretch">
+            <div class="content">
+              <h3>Why Choose Mentor?</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+              </p>
+              <div class="text-center">
+                <a href="about.html" class="more-btn">Get Started <i class="bx bx-chevron-right"></i></a>
+              </div>
+              <div class="text-center">
+                <a href="about.html" class="more-btn">Welcome <i class="bx bx-chevron-right"></i></a>
+              </div>
+            </div>
+          </div>
+          
+                </div>
+              </div>
+              </section>
+            
+
+    <!-- <div class="button"> 
+      <a href="/" class="btn_started">Get Started</a>
+      <a href="https://www.youtube.com/watch?v=U5xxZan5Cmo" class="youtube_link"></a>
+    </div> -->
+
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
