added spacing to buttons

--- a/courses.html
+++ b/courses.html
@@ -100,7 +100,7 @@
                 Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
               </p>
               <div class="text-center">
-                <a href="about.html" class="more-btn">Get Started <i class="bx bx-chevron-right"></i></a>
+                <a href="about.html" class="more-btn">Get Started <i class="bx bx-chevron-right"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="about.html" class="more-btn">Welcome <i class="bx bx-chevron-right"></i></a>
               </div>
             </div>
