--- a/courses.html
+++ b/courses.html
@@ -101,7 +101,7 @@
               </p>
               <div class="text-center">
                 <a href="about.html" class="more-btn">Get Started <i class="bx bx-chevron-right"></i></a>
-                <a href="about.html" class="more-btn">Welcome <i class="bx bx-chevron-right"></i></a>
+                <a href="about.html" class="more-btn-right">Welcome <i class="bx bx-chevron-right"></i></a>
               </div>
             </div>
           </div>
