new version of homepage

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex justify-content-center align-items-center">
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Heal Minds<br>in this World 520</h1>
+      <h1>Heal Minds in this World</h1>
       <h2></h2>
-      <a href="courses.html" class="btn-get-started">Get Started</a>
-    </div>
+    <!--  <a href="courses.html" class="btn-get-started">Get Started</a>
+    </div>-->
   </section><!-- End Hero -->
 
   <main id="main">
@@ -78,7 +78,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/dope.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h2>What are we teaching</h2>
@@ -88,9 +88,12 @@
               During the process, we help people cultivate mindfulness mindset to oversome every challenge.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Supportive environment</li>
               <li><i class="bi bi-check-circle"></i>Programming skills</li>
+              <li><i class="bi bi-check-circle"></i> Supportive environment</li>
               <li><i class="bi bi-check-circle"></i>Mindfulness</li>
+              <li><i class="bi bi-check-circle"></i>Critical thinking</li>
+              <li><i class="bi bi-check-circle"></i>Team Work</li>
+              <li><i class="bi bi-check-circle"></i>Team and Personal Projects</li>
             </ul>
 
           </div>
