--- a/about-us-v2.html
+++ b/about-us-v2.html
@@ -40,12 +40,12 @@
       <h1 class="logo me-auto"><a href="index.html">Consciouswithlife</a></h1>
 
 
-      <nav id="navbar" class="navbar order-last order-lg-0">
+      <nav id="navbar" class="navbar order-last order-lg-0" style="list-style: none;">
 
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="aboutUs.html">About Us</a></li>
-          <li><a href="courses.html">Courses</a></li>
-          <li><a href="2022SummerCamp.html">2022 Summer Camp</a></li>
+          <li><a href="index.html" style="text-decoration:none">Home</a></li>
+          <li><a class="active"  href="aboutUs.html" style="text-decoration:none">About Us</a></li>
+          <li><a href="courses.html" style="text-decoration:none">Courses</a></li>
+          <li><a href="2022SummerCamp.html" style="text-decoration:none">2022 Summer Camp</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -125,7 +125,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+					<section id="two" class="wrapper style4 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
@@ -168,7 +168,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+					<section id="three" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
