--- a/courses.html
+++ b/courses.html
@@ -94,10 +94,9 @@
         <div class="row">
           <div class="col-lg-12 d-flex align-items-stretch">
             <div class="content">
-              <h3>Why Choose Mentor?</h3>
+              <h3>Why Choose ConsciousWithLife</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+                Today programmers are facing unparalleled levels of stress, mental burnout and nervous breakdown. ConsciousWithLife is pioneering an innovative apporach of programming called CAH programming (Compassion and Healing Programming) which can reduce and alleviate stress for programmers and students whilst learning to create quality software and code.
               </p>
               <div class="text-center">
                 <a href="about.html" class="more-btn">Get Started <i class="bx bx-chevron-right"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -207,15 +206,12 @@ Learning is always best when a student is relaxed and at ease. Programming is a 
                 CAH (Compassion and Healing) Programming with Python is a novel and cutting edge way of learning programming and logical concepts together with forward planning. Learning is always best when a student is relaxed and at ease. Programming is a high impact learning activity with an emphasis on logical thinking with applied problem solving. Students learn better when learning whilst cultivating a happy mental state and compassionate and thoughtful mind stream.
               </p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <li><i class="bi bi-check-circle"></i> Developing a Logic Mindset</li>
+                <li><i class="bi bi-check-circle"></i> Learning how to make and deliver finished websites</li>
+                <li><i class="bi bi-check-circle"></i> Understand to program in Javascript</li>
+                <li><i class="bi bi-check-circle"></i> Cultivate a compassionate and understanding heart</li>
               </ul>
-              <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              </p>
-  
-            </div>
+             </div>
           </div>
   
         </div>
