--- a/about-us-v2.html
+++ b/about-us-v2.html
@@ -40,12 +40,12 @@
       <h1 class="logo me-auto"><a href="index.html">Consciouswithlife</a></h1>
 
 
-      <nav id="navbar" class="navbar order-last order-lg-0">
+      <nav id="navbar" class="navbar order-last order-lg-0" style="list-style: none;">
 
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="aboutUs.html">About Us</a></li>
-          <li><a href="courses.html">Courses</a></li>
-          <li><a href="2022SummerCamp.html">2022 Summer Camp</a></li>
+          <li><a href="index.html" style="text-decoration:none">Home</a></li>
+          <li><a class="active"  href="aboutUs.html" style="text-decoration:none">About Us</a></li>
+          <li><a href="courses.html" style="text-decoration:none">Courses</a></li>
+          <li><a href="2022SummerCamp.html" style="text-decoration:none">2022 Summer Camp</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -87,11 +87,12 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="assets/img/trainers/avatar_Kuang.PNG" alt="" data-position="center 20%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Kuang Kao</h2>
+									<p>Founder & CEO of ConsciousWithLife</p>
+									<p>Kuang had a vision for a different way to learn programming where he noticed that many programmers and Computer Science students were suffering and experiencing great pain in their work. He developed and is pioneering CAH (Compassion And Healing) programming to help improve happiness for students and programmers alike, which in turn will lead to better code and learning skills. Kuang is a keen surfer and skydiver!</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -99,11 +100,12 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="assets/img/trainers/avatar_Rishi.PNG" alt="" data-position="center 40%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Richie Choolun</h2>
+									<p>Teacher</p>
+									<p>Richie is passionate about programming and helping students to learn programming in the CAH way. Richie believes that the best way for a student or programmer to excel is to love what they are doing and have fun! Richie also enjoys listening to Jazz, Western Classical, Chinese and Indian music as well as playing Double Bass and Clarinet</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -111,11 +113,12 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="assets/img/trainers/avatar_Hanh.PNG" alt="" data-position="50% 40%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Hanh Tranh</h2>
+									<p>Consultant</p>
+									<p>Hanh is a distinguished academic based in Australia and is business consultant to ConsciousWithLife. Hanh enjoys Vietnamese and Nepalese cuisine!</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -125,7 +128,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+					<section id="two" class="wrapper style4 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
@@ -168,7 +171,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+					<section id="three" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
