--- a/about-us-v2.html
+++ b/about-us-v2.html
@@ -83,8 +83,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1 style="color:#3D998A; font-family: 'Joan', serif">Consciouswithlife</h1>
-							<p style="font-family: 'Libre Bodoni', serif">Just another fine responsive site template designed by <br/>
-							and released for free under the </p>
+							<p style="font-family: 'Libre Bodoni', serif">Everything we learn creates our conscious.<br> May we have the force to heal minds in this world ❤️</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
