--- a/courses.html
+++ b/courses.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="aboutUs.html">About Us</a></li>
+          <li><a href="about-us-v2.html">About Us</a></li>
           <li><a href="courses.html">Courses</a></li>
           <li><a href="2022SummerCamp.html">2022 Summer Camp</a></li>
         </ul>
