--- a/about-us-v2.html
+++ b/about-us-v2.html
@@ -51,7 +51,7 @@
       <nav id="navbar" class="navbar order-last order-lg-0" style="list-style: none;">
 
           <li><a href="index.html" style="text-decoration:none">Home</a></li>
-          <li><a class="active"  href="aboutUs.html" style="text-decoration:none">About Us</a></li>
+          <li><a class="active"  href="about-us-v2.html" style="text-decoration:none">About Us</a></li>
           <li><a href="courses.html" style="text-decoration:none">Courses</a></li>
           <li><a href="2022SummerCamp.html" style="text-decoration:none">2022 Summer Camp</a></li>
         </ul>
@@ -197,7 +197,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 fade-up">
+					<!--<section id="three" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
@@ -253,7 +253,7 @@
 								</section>
 							</div>
 						</div>
-					</section>
+					</section>-->
 
 			</div>
 
