--- a/about-us-v2.html
+++ b/about-us-v2.html
@@ -53,7 +53,7 @@
           <li><a href="index.html" style="text-decoration:none">Home</a></li>
           <li><a class="active"  href="about-us-v2.html" style="text-decoration:none">About Us</a></li>
           <li><a href="courses.html" style="text-decoration:none">Courses</a></li>
-          <li><a href="2022SummerCamp.html" style="text-decoration:none">2022 Summer Camp</a></li>
+          <!--<li><a href="2022SummerCamp.html" style="text-decoration:none">2022 Summer Camp</a></li>-->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -64,7 +64,7 @@
   </header><!-- End Header -->
 
 		<!-- Sidebar -->
-			<section id="sidebar">
+			<!--<section id="sidebar">
 				<div class="inner">
 					<nav>
 						<ul>
@@ -75,7 +75,7 @@
 						</ul>
 					</nav>
 				</div>
-			</section>
+			</section>-->
 
 		<!-- Wrapper -->
 			<div id="wrapper">
