--- a/courses.html
+++ b/courses.html
@@ -52,7 +52,7 @@
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="about-us-v2.html">About Us</a></li>
           <li><a href="courses.html">Courses</a></li>
-          <li><a href="2022SummerCamp.html">2022 Summer Camp</a></li>
+          <!--<li><a href="2022SummerCamp.html">2022 Summer Camp</a></li>-->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
