--- a/about-us-v2.html
+++ b/about-us-v2.html
@@ -41,8 +41,30 @@
 	<body class="is-preload">
   
   <!-- ======= Header ======= -->
-  
+    <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center">
+
+      <h1 class="logo me-auto"><a href="index.html">Consciouswithlife</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar order-last order-lg-0">
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="about-us-v2.html">About Us</a></li>
+          <li><a href="courses.html">Courses</a></li>
+          <!--<li><a href="2022SummerCamp.html">2022 Summer Camp</a></li>-->
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+      <!--<a href="courses.html" class="get-started-btn">Get Started</a>-->
+
+    </div>
+  </header><!-- End Header -->
+  
+  <!--<header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="index.html">Consciouswithlife</a></h1>
@@ -52,16 +74,16 @@
 
           <li><a href="index.html" style="text-decoration:none">Home</a></li>
           <li><a class="active"  href="about-us-v2.html" style="text-decoration:none">About Us</a></li>
-          <li><a href="courses.html" style="text-decoration:none">Courses</a></li>
+          <li><a href="courses.html" style="text-decoration:none">Courses</a></li>-->
           <!--<li><a href="2022SummerCamp.html" style="text-decoration:none">2022 Summer Camp</a></li>-->
-        </ul>
+        <!--</ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>--><!-- .navbar -->
 
       <!--<a href="courses.html" class="get-started-btn">Get Started</a>-->
 
-    </div>
-  </header><!-- End Header -->
+    <!--</div>
+  </header>--><!-- End Header -->
 
 		<!-- Sidebar -->
 			<!--<section id="sidebar">
