--- a/about-us-v2.html
+++ b/about-us-v2.html
@@ -8,9 +8,13 @@
 	<head>
 		<title>Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets-2/css/main.css" />
-		<link href="assets/css/style.css" rel="stylesheet">
+		<meta content="width=device-width, initial-scale=1.0" name="viewport">
+		<meta content="" name="description">
+  	<meta content="" name="keywords">
+		
+	<!-- Template Main CSS File -->
+	<link rel="stylesheet" href="assets-2/css/main.css" />
+	<link rel="stylesheet" href="assets/css/style.css"/>
   
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -36,12 +40,10 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 		
-		<noscript><link rel="stylesheet" href="assets-2/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<body>
   
   <!-- ======= Header ======= -->
-    <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
